--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div class="col-md-6 col-12 p-0 m-0">
           <div class="main_div2">
-            <img    src="./image/hours.jpg" >
+            <img class="img1"   src="./image/hours.jpg" >
           </div>
         </div>
     </div>
